[tool.poetry]
name = "course-work3-putilovskaya-am"
version = "0.1.0"
description = ""
authors = ["putilovskaya <putilovskayaa@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
